PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.how-to-load-csv-file-in-jupyter-notebook.txt
<div class="post-text" itemprop="text">
<p>I'm new and studying machine learning. I stumble upon a tutorial I found online and I'd like to make the program work so I'll get a better understanding. However, I'm getting problems about loading the CSV File into the Jupyter Notebook. </p>
<p>I get this error:</p>
<pre><code>File "&lt;ipython-input-2-70e07fb5b537&gt;", line 2
    student_data = pd.read_csv("C:\Users\xxxx\Desktop\student-intervention- 
system\student-data.csv")
                          ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in 
position 2-3: truncated \UXXXXXXXX escape
</code></pre>
<p>and here is the code: 
<a href="https://i.stack.imgur.com/XMz4T.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/XMz4T.png"/></a></p>
<p>I followed tutorials online regarding this error but none worked. Does anyone know how to fix it? </p>
<p>3rd attempt with r"path"
<a href="https://i.stack.imgur.com/p2VC1.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/p2VC1.png"/></a></p>
<p>I've tried also "\" and utf-8 but none worked. </p>
<p>I'm using the latest version of Anaconda
Windows 7
Python 3.7</p>
</div>
<div class="post-text" itemprop="text">
<p>Use raw string notation for your Windows path. In python '\' have meaning in python. Try instead do string like this r"path":</p>
<p><code>student_data = pd.read_csv(r"C:\Users\xxxx\Desktop\student-intervention- 
system\student-data.csv")</code></p>
<p>If it doesnt work try this way:</p>
<pre><code>import os

path = os.path.join('c:' + os.sep, 'Users', 'xxxx', 'Desktop', 'student-intervention-system', 'student-data.csv')
student_data = pd.read_csv(path)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<blockquote>
<h2>Either replace all backslashes <code>\</code> with frontslashes <code>/</code> or place a <code>r</code> before your filepath string to avoid this error. <em>It is not a matter of your folder name being too long.</em></h2>
</blockquote>
<hr/>
<p>As Bohun Mielecki mentioned, the <code>\</code> character which is typically used to denote file structure in Windows has a different function when written within a string.</p>
<blockquote>
<p><strong>From Python3 Documentation:</strong> The backslash <code>\</code> character is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.</p>
</blockquote>
<p>How this particularly affects your statement is that in the line</p>
<pre><code>student_data = pd.read_csv("C:\Users\xxxx\Desktop\student-intervention- 
system\student-data.csv")
</code></pre>
<p><code>\Users</code> matches the escape sequence <code>\Uxxxxxxxx</code> whereby <code>xxxxxxxx</code> refers to a <code>Character with 32-bit hex value xxxxxxxx</code>. Because of this, Python tries to find a 32-bit hex value. However as the <code>-sers</code> from <code>Users</code> doesn't match the <code>xxxxxxxx</code> format, you get the error:</p>
<blockquote>
<p>SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in 
  position 2-3: truncated \UXXXXXXXX escape</p>
</blockquote>
<hr/>
<p>The reason why your code works now is that you have placed a <code>r</code> in front of <code>'C:\Users\xxxx\Desktop\project\student-data.csv'</code>. This tells python not to process the backslash character <code>/</code> as it usually does and read the whole string as-is. </p>
<p>I hope this helps you better understand your problem. If you need any more clarification, do let me know.</p>
<p>Source: <a href="https://docs.python.org/3/reference/lexical_analysis.html#string-and-bytes-literals" rel="nofollow noreferrer">Python 3 Documentation</a></p>
</div>
<div class="post-text" itemprop="text">
<p>Try</p>
<pre><code>pd.read_csv('file_name',encoding = "utf-8")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>I found the problem. The problem is my folder name that is really long. I changed my folder name into "project" and the data is now finally loaded! Silly!</p>
<p><a href="https://i.stack.imgur.com/y3Hfe.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/y3Hfe.png"/></a></p>
</div>
<span class="comment-copy">Put an r before your string or change to \\. \ is an escape character!</span>
<span class="comment-copy">Possible duplicate of <a href="https://stackoverflow.com/questions/37400974/unicode-error-unicodeescape-codec-cant-decode-bytes-in-position-2-3-trunca">(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape</a></span>
<span class="comment-copy">Hi. Tried it. I got an error SyntaxError: EOL while scanning string literal</span>
<span class="comment-copy">got an error SyntaxError: invalid syntax</span>
<span class="comment-copy">Can you share the updated code and the error? Can you share 'student-data.csv' or a subset of it?</span>
